# llm-ops

./: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
serving/: api.py
src/: api.py
tests/: test_api.py
