[tool.poetry]
name = "llm-ops"
version = "0.1.0"
description = ""
authors = ["stephenCarmody <stephen.m.carmody@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
